--- a/locales/en.json
+++ b/locales/en.json
@@ -11,11 +11,23 @@
         "reports": "Reports",
         "groups": "Groups",
         "users": "Users",
+        "basic info": "Basic info",
         "password": "Password",
+        "timezone": "Timezone",
+        "locale": "Language",
+        "password confirm": "Confirm password",
+        "username": "Username",
+        "first name": "First name",
+        "last name": "Last name",
+        "email": "Email",
         "cancel": "Cancel",
         "submit": "Submit",
         "logout": "Logout",
         "security": "Security",
+        "add sub-group": "Add Sub-group",
+        "add user": "Add user",
+        "edit user": "Edit user",
+        "delete user": "Delete user",
         "menu": "Menu",
         "capsLockTitle": "Caps Lock is On",
         "capsLockMsg1": "Having Caps Lock on may cause you to ",
