--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,10 @@
         "backoffice": "Backoffice",
         "profile": "Profile",
         "profiles": "Profiles",
+        "basic": "Basic",
+        "administrator": "Administrator",
+        "super administrator": "Super Administrator",
+        "guest": "Guest",
         "make": "Make",
         "level": "Level",
         "login": "Login",
@@ -15,6 +19,9 @@
         "password": "Password",
         "timezone": "Timezone",
         "locale": "Language",
+        "culture": "Language",
+        "owners": "Owners",
+        "guests": "Guests",        
         "password confirm": "Confirm password",
         "username": "Username",
         "first name": "First name",
