--- a/locales/en.json
+++ b/locales/en.json
@@ -5,6 +5,7 @@
         "profiles": "Profiles",
         "basic": "Basic",
         "administrator": "Administrator",
+        "administrators": "Administrators",
         "super administrator": "Super Administrator",
         "guest": "Guest",
         "make": "Make",
@@ -14,6 +15,7 @@
         "mobiles": "Vehicles",
         "reports": "Reports",
         "groups": "Groups",
+        "group": "Group",
         "users": "Users",
         "basic info": "Basic info",
         "password": "Password",
@@ -21,7 +23,7 @@
         "locale": "Language",
         "culture": "Language",
         "owners": "Owners",
-        "guests": "Guests",        
+        "guests": "Guests",
         "password confirm": "Confirm password",
         "username": "Username",
         "first name": "First name",
