--- a/locales/pt.json
+++ b/locales/pt.json
@@ -11,6 +11,7 @@
         "reports": "Relatórios",
         "groups": "Grupos",
         "users": "Users",
+        "administrator": "Administrators",
         "basic info": "Informação Básica",
         "password": "Password",
         "timezone": "Fuso Horário",
