--- a/locales/en.json
+++ b/locales/en.json
@@ -30,10 +30,13 @@
         "last name": "Last name",
         "email": "Email",
         "cancel": "Cancel",
+        "save": "Save",
+        "edit": "Edit",
         "submit": "Submit",
         "logout": "Logout",
         "security": "Security",
         "add sub-group": "Add Sub-group",
+        "add new group": "Add new group",
         "add user": "Add user",
         "edit user": "Edit user",
         "delete user": "Delete user",
