--- a/locales/pt.json
+++ b/locales/pt.json
@@ -22,10 +22,13 @@
         "last name": "Último nome",
         "email": "Email",
         "cancel": "Cancelar",
+        "save": "Guardar",
+        "edit": "Editar",
         "submit": "enviar",
         "logout": "Logout",
         "security": "Segurança",
         "add sub-group": "Adicionar Sub-grupo",
+        "add new group": "Adicioanar novo grupo",
         "add user": "Adicionar utilizador",
         "edit user": "Editar utilizador",
         "delete user": "Apagar utilizador",
