--- a/locales/en.json
+++ b/locales/en.json
@@ -35,9 +35,11 @@
         "submit": "Submit",
         "logout": "Logout",
         "security": "Security",
-        "add sub-group": "Add Sub-group",
-        "add new group": "Add new group",
-        "add user": "Add user",
+        "new sub-group": "New Sub-group",
+        "new group": "New group",
+        "add user": "New user",
+        "delete group": "Delete group",
+        "edit group": "Edit group",
         "edit user": "Edit user",
         "delete user": "Delete user",
         "menu": "Menu",
